--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
+        crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Document</title>
 </head>
@@ -12,9 +14,9 @@
 <body>
     <div class="login-container">
         <form action="">
-            Login: <input type="text">
-            Password: <input type="password">
-            <input type="submit" value="Login">
+            Login: <input id='username' type="text">
+            Password: <input id='password' type="password">
+            <input type="submit" id='submit-login' value="Login">
         </form>
 
     </div>
@@ -22,49 +24,188 @@
     <div class="library-container">
         <div class="concept-container">
             <h3>Concepts</h3>
-            <div class="concept-category" id=concept-category1>
-                <p>Functions</p>
-            </div>
+            <!-- <div class="concept-category" id=concept-category1>
+                <h4>Functions</h4>
+            </div> -->
         </div>
         <div class="content-container">
             <h3>Content</h3>
-            <div class="content-item" data-id='1' id="content-item1">
-                <h4>Sample Link</h4>
-                <p class='star-number'>500</pclas>
-                    <p class='star-image'>STAR</p>
-            </div>
-            <div class="content-item" data-id='2' id="content-item2">
-                <h4>Sample Link</h4>
-                <p class='star-number'>421</p>
-                <p class='star-image'>STAR</p>
+            <div class="content-item-container">
+                <div class="content-item" data-id='1' id="content-item1">
+                    <a>Sample Link</a>
+                    <p class='star-number'>500</p>
+                    <i class='fas fa-star saved star-image'></i>
+                </div>
+                <div class="content-item" data-id='2' id="content-item2">
+                    <a>Sample Link</a>
+                    <p class='star-number'>421</p>
+                    <i class='fas fa-star star-image'></i>
+                </div>
             </div>
         </div>
+    </div>
+    <div class="add-content">
+        <h2>Add Content</h2>
+        <form action="">
+            Concept: <select>
+
+            </select>
+            <label for="new-name">Title: </label>
+            <input type="text" id='new-name'>
+            <label for="new-link">Link: </label>
+            <input type="text" id='new-link'>
+            <input type="submit" id='submit-content' value="Add Content">
+        </form>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous">
     </script>
     <script>
-        // $.get('/api/concepts', function (err, data) {
-        //     if (err) throw err;
-        //     //Iteems come in an array of objects and come in Most Likes, DESC
-        //     data.forEach(function (item) {
-        //         var newDiv = $("<div class= content-item>");
-        //         var linkTitle = $(`<a href="${data.link}">`);
-        //         var starNumber = $("<p class = star-number>");
-        //         var starImage = $("<img class = star-image>");
-        //         newDiv.data('id', data.id)
-        //         newDiv.attr('id', 'content-item' + data.id)
-        //         linkTitle.text(data.title);
-        //         starImage.attr('src', 'imageSRC');
-        //         newDiv.append(linkTitle, starNumber, starImage);
-        //         $(".content-container").prepend(newDiv);
+        $(function () {
+            var loggedIn = false;
 
-        //     })
-        // })
-        $(".star-image").on('click', function (e) {
-            var starID = $(this).parent().data('id');
-            console.log(starID);
+
+            // })
+            // $.get('/api/concept', function (err, data) {
+            // if (err) throw err;
+            data = [{
+                    id: 3,
+                    title: 'conditionals'
+                },
+                {
+                    id: 4,
+                    title: 'api calls'
+                }, {
+                    id: 12,
+                    title: 'functions'
+                }
+
+            ]
+            data.forEach(function (concept) {
+                var newDiv = $("<div class= 'concept-category'>");
+                var linkTitle = $(`<h4>`);
+                var dropdownOption = $(`<option value= ${concept.title}>`)
+                newDiv.data('id', concept.id)
+                newDiv.attr('id', 'category-' + concept.title)
+                linkTitle.text(concept.title);
+                newDiv.append(linkTitle);
+                $(".concept-container").append(newDiv);
+                dropdownOption.text(concept.title);
+                $('select').append(dropdownOption);
+            });
+
+            $(".concept-category").on('click', function (e) {
+                $(".content-item-container").empty();
+
+                var category = $(this).attr('id');
+                category = category.slice(category.indexOf('-') + 1);
+                console.log(category);
+                // $.get('/api/content/' + category, function (err, data) {
+                // if (err) throw err;
+                data = [{
+                        content: 'testLink',
+                        id: 1,
+                        title: 'im a title',
+                        likes: 200,
+                        saved: true,
+                        category: 'functions'
+                    },
+                    {
+                        content: 'testLink2',
+                        id: 2,
+                        title: 'im a title2',
+                        likes: 431,
+                        saved: false,
+                        category: 'conditionals'
+                    },
+                    {
+                        content: 'testLink3',
+                        id: 12,
+                        title: 'im a title3',
+                        likes: 300,
+                        saved: false,
+                        category: 'api calls'
+
+                    },
+                ]
+                //Items come in an array of objects and come in Most Likes, DESC
+                data.forEach(function (item) {
+                    var newDiv = $("<div class= content-item>");
+                    var linkTitle = $(`<a href="${item.content}">`);
+                    var starNumber = $("<p class = star-number>");
+                    var starImage = $("<i class='fas fa-star star-image'></i>");
+                    if (item.saved && loggedIn) starImage.addClass('saved');
+                    starNumber.text(item.likes);
+                    newDiv.data('id', item.id)
+                    newDiv.attr('id', 'content-item' + item.id)
+                    linkTitle.text(item.title);
+                    starImage.attr('src', 'imageSRC');
+                    newDiv.append(linkTitle, starNumber, starImage);
+                    $(".content-item-container").prepend(newDiv);
+
+
+                })
+                // })
+
+            })
+
+
+
+
+
+            $(".star-image").on('click', function (e) {
+                var starID = $(this).parent().data('id');
+                if ($(this).hasClass('saved')) {
+                    // $(this).css('color', 'black');
+                    $(this).toggleClass('saved');
+                    $('')
+                    $.ajax('/api/content/' + starID, {
+                        method: 'PUT',
+                        data: {
+                            saved: false
+                        }
+                    })
+                } else {
+                    // $(this).css('color', 'orange')
+                    $(this).toggleClass('saved')
+                    $.ajax('/api/content/' + starID, {
+                        method: 'PUT',
+                        data: {
+                            saved: true
+                        }
+                    })
+                }
+
+
+
+            })
+            $("#submit-content").on('click', function (e) {
+                e.preventDefault();
+                var createObj = {
+                    content: $("#new-link").val(),
+                    title: $("#new-name").val(),
+                    category: $("select").val(),
+                    likes: 0
+
+                }
+                $.post('/api/concept/new', createObj, function () {
+                    //modal pop up - successfully submitted
+                })
+
+            })
+            $("#submit-login").on('click', function (e) {
+                e.preventDefault();
+                var username = $("#login").val();
+                var password = $("#password").val();
+
+                $.post('/login', {
+                    username,
+                    password
+                }, function (data) {
+                    if (data === 'success') loggedIn = true;
+                })
+            })
 
         })
     </script>
