--- a/public/signin.html
+++ b/public/signin.html
@@ -6,12 +6,12 @@
 </head>
  
 <body>
-    <form id="signup" name="signup" method="post" action="/signup">
-        <label for="username">Username</label>
-        <input class="text" name="username" type="username" />
+    <form id="signup" name="signup" method="post" action="/signin">
+        <label for="email">Email</label>
+        <input class="text" name="email" type="email" />
         <label for="password">Password</label>
         <input name="password" type="password" />
-        <input class="btn" type="submit" value="Sign Up" />
+        <input class="btn" type="submit" value="Sign In" />
     </form>
  
 </body>
