--- a/public/signup.html
+++ b/public/signup.html
@@ -7,8 +7,8 @@
  
 <body>
     <form id="signup" name="signup" method="post" action="/signup">
-        <label for="userEmail">Email</label>
-        <input class="text" name="userEmail" type="email" />
+        <label for="email">Email</label>
+        <input class="text" name="email" type="email" />
         <label for="name">Name</label>
         <input name="name" type="text" />
         <label for="password">Password</label>
